--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -23,13 +23,13 @@
         android:hardwareAccelerated="true"
         android:icon="@mipmap/icon"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        tools:replace="android:allowBackup"
-        android:largeHeap="true">
+        tools:replace="android:allowBackup">
 
         <uses-library
             android:name="org.apache.http.legacy"
@@ -45,77 +45,106 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.Login.WelcomeActivity"
-            android:exported="true"/>
-        <activity android:name=".activity.Login.LoginActivity"
-            android:exported="true"/>
-        <activity android:name=".activity.Login.RegistrationActivity"
-            android:exported="true"/>
-        <activity android:name=".activity.Login.ForgotpasswordActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:exported="true"/>
-        <activity android:name=".activity.Login.ResetNewPasswordActivity"
-            android:exported="true"/>
-
-        <activity android:name=".activity.DashBoard.HomeActivity"
+        <activity
+            android:name=".activity.Login.WelcomeActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.Login.LoginActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:exported="true"
-            android:theme="@style/AppThemeHome">
-        </activity>
-
-        <activity android:name=".activity.DashBoard.HomeInnerListActivity"
-            android:exported="true"/>
-
-        <activity android:name=".activity.Lead.LeadDashboardActivity"
-            android:theme="@style/AppThemeHome"
-            android:exported="true"/>
-
-        <activity android:name=".activity.Lead.AddLeadActivity"
-            android:exported="true"/>
-
-        <activity android:name=".activity.Lead.NotesListActivity"
-            android:exported="true"/>
-        <activity android:name=".activity.Lead.AddNotesActivity"
-            android:exported="true"/>
-
-        <activity android:name=".activity.Lead.AddAttchmentsActivity"
-            android:exported="true"/>
-        <activity android:name=".activity.Lead.AttachmentsListActivity"
-            android:exported="true"/>
-
-        <activity android:name=".activity.Lead.CallsListActivity"
-            android:exported="true"/>
-        <activity android:name=".activity.Lead.AddCallLogsActivity"
-            android:exported="true"/>
-        <activity android:name=".activity.Lead.CallsDetailsActivity"
-            android:exported="true"/>
-
-        <activity android:name=".activity.Lead.MeetingsListActivity"
-            android:exported="true"/>
-        <activity android:name=".activity.Lead.AddMeetingsActivity"
-            android:exported="true"/>
-        <activity android:name=".activity.Lead.MeetingsDetailsActivity"
-            android:exported="true"/>
-
-        <activity android:name=".activity.Lead.AddTaskLogsActivity"
-            android:exported="true"/>
-        <activity android:name=".activity.Lead.TasksListActivity"
-            android:exported="true"/>
-        <activity android:name=".activity.Lead.TasksDetailsActivity"
-            android:exported="true"/>
-
-        <activity android:name=".activity.NBInquiry.AddNBActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize" />
+        <activity
+            android:name=".activity.Login.RegistrationActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.Login.ForgotpasswordActivity"
             android:exported="true"
-            android:windowSoftInputMode="stateHidden|adjustPan"/>
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".activity.Login.ResetNewPasswordActivity"
+            android:exported="true" />
 
-        <activity android:name=".activity.NBInquiry.InquiryListActivity"
-            android:exported="true"/>
-        <activity android:name=".activity.NBInquiry.InquiryEditActivity"
-            android:exported="true"/>
+        <activity
+            android:name=".activity.DashBoard.HomeActivity"
+            android:exported="true"
+            android:theme="@style/AppThemeHome"></activity>
 
-        <activity android:name=".activity.Users.UsersListActivity"
-            android:exported="true"/>
-        <activity android:name=".activity.Users.AddUsersActivity"
-            android:exported="true"/>
+        <activity
+            android:name=".activity.DashBoard.HomeInnerListActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".activity.Lead.LeadDashboardActivity"
+            android:exported="true"
+            android:theme="@style/AppThemeHome" />
+
+        <activity
+            android:name=".activity.Lead.AddLeadActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".activity.Lead.NotesListActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.Lead.AddNotesActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".activity.Lead.AddAttchmentsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.Lead.AttachmentsListActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".activity.Lead.CallsListActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.Lead.AddCallLogsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.Lead.CallsDetailsActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".activity.Lead.MeetingsListActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.Lead.AddMeetingsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.Lead.MeetingsDetailsActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".activity.Lead.AddTaskLogsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.Lead.TasksListActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.Lead.TasksDetailsActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".activity.NBInquiry.AddNBActivity"
+            android:exported="true"
+            android:windowSoftInputMode="stateHidden|adjustPan" />
+
+        <activity
+            android:name=".activity.NBInquiry.InquiryListActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.NBInquiry.InquiryEditActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".activity.Users.UsersListActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.Users.AddUsersActivity"
+            android:exported="true" />
         <!-- filepicker -->
         <provider
             android:name="androidx.core.content.FileProvider"
