--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Feb 13 16:44:36 IST 2024
-sdk.dir=C\:\\Users\\Dell\\AppData\\Local\\Android\\Sdk
+#Thu Feb 22 17:06:05 IST 2024
+sdk.dir=C\:\\Users\\aseum7\\AppData\\Local\\Android\\Sdk
